fixed pmd:IntegerInstantiation,BooleanInstantiation
SVN-Revision: 15497